--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
     environment:
       #Customize the JVM maximum heap limit
       MAVEN_OPTS: -Xmx3200m
+      MY_NAME: $MY_NAME
       
     steps:
       - checkout
